# GamblerEditorBevy

./: .gitignore  Cargo.toml
.cursor/hooks/state/: continual-learning.json
.obsidian/: appearance.json  community-plugins.json  graph.json  workspace.json
.obsidian/plugins/3d-graph-new/: data.json
assets/scenes/: scene.json  scene.ron
assets/shaders/: pixel_art_material.wgsl
planning/: Book1.xlsx  BudgetTool.xlsx  Controls.md  Credits.md  Descriptions -thx gpt.md  Gambler Editor.md  Mechanics.md  Planning Canvas.canvas  Root.md  Table Of Contents.md  To-Do's.md
planning/Art/: Art.md  player_mk2_run.aseprite  snow_concept.aseprite
planning/Art/Cards/: Card Concept Art.md
planning/Art/Player/: Player Concept Art.md  le black man le jumping le jacks.aseprite  player_concept_mk2.aseprite  tarot base.aseprite
planning/Dungeons and Dragons/: 1- The Magician.md  2- The High Preistess.md  4- The Empress.md  5- The Emperor.md  6- The Hierophant.md  DnD Canvas.canvas  DnD Tips from kael.md  Untitled.canvas
planning/Mechanic Breakdowns/: Context Menu.md  Mechanics.md  Place.md  Rectangle Tool.md  SignificantComponent Trait.md  To-Do's.md  Yenter-Noscape.md
src/: consts.rs  main.rs
src/editor/: catalogue_update.rs  mod.rs  scene.rs  tools.rs  ui.rs
src/editor/actor/: actor_ui.rs  (+3 more)
src/game/: mod.rs  player.rs
src/interactables/: mod.rs
src/mcp/: bridge.rs  mod.rs  server.rs  systems.rs
src/rendering/: mod.rs
src/tiles/: mod.rs
src/utilities/: bounding_box.rs  coordinate.rs  direction.rs  mod.rs  physics.rs  resources.rs  selection.rs  tools.rs
(+130 files in other folders)
