[package]
name = "gambler-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version="0.18.1", features = ["bevy_dev_tools",]}
bevy_rapier2d = { version = "0.33.0", features = ["serde-serialize",  "debug-render-2d"] }
bevy_egui = "0.39.1"

anyhow = "1.0.97"

serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
ron = "0.10.1"
rayon = "1.10.0"

rmcp = { version = "1", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
    "reqwest",
] }
schemars = "1.2.1"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }